refactor: Update InboxService search method parameters and improve logging configuration